# mail-done

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ts  README.md  alembic.ini  process.sh  process_folders.py  process_inbox.py  pyproject.toml  pytest.ini  run_mcp_server.sh  start-ts.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_documents.py  003_documents_lifecycle.py  004_add_ocr_detection_fields.py  005_add_attachment_index_tracking.py  006_application_share_tokens.py  007_review_assignments.py  008_property_listing_tables.py  33ac1c8dc94b_add_enrichment_status_tracking_columns.py  34a_add_raw_scrape_data_column.py  35a_add_financing_columns.py  36a_add_sun_financing_columns.py  37a_add_property_emails_table.py  38a_add_validated_to_property_emails.py  39a_add_mfh_fields.py  40a_add_lab_members_email_lower_index.py  41a_add_position_fit_columns.py  42a_add_notify_sent_at_columns.py  43a_add_spam_prototype_centroids.py
backend/: __init__.py
backend/api/: __init__.py  auditing.py  auth.py  listing_schemas.py  main.py  mcp_mount.py  rate_limiting.py  review_auth.py  review_middleware.py  review_schemas.py  schemas.py  security_monitor.py  signed_auth.py
backend/core/: config.py  paths.py  (+2 more)
config/: accounts.example.yaml  ai_category_actions.example.yaml  categories.example.yaml  classification_rules.example.yaml  clients.example.yaml  document_hosts.yaml.example  due_diligence_template.yaml  inquiry_templates.example.yaml  oauth_policies.example.yaml  preprocessing_rules.example.yaml  profile_tags.example.yaml  prompts.example.yaml  vip_senders.example.yaml
deploy/: deploy-pi.sh  deploy.sh  docker-compose.pi.yml  docker-compose.yml  init-db.sql  mail-done.service  test-deployment.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_REVIEW.md  DEVELOPMENT.md  GMAIL_SETUP.md  LLM_CONFIGURATION.md  MCP.md  OUTLOOK_OAUTH2.md  PROCESS_FOLDERS.md  PROCESS_INBOX.md  implementation-plan-review-assignments.md
mcp_server/: __init__.py  __main__.py  api_client.py  schemas.py  server.py
scripts/: db_migrate.sh  init-config-overlay.sh  oauth2_setup_outlook.py  rebuild_spam_prototypes.py
web-ui/: .gitignore  Dockerfile  README.md  app.py  env-template  requirements.txt  start.sh
(+223 files in other folders)
